# Seden-Animation

./: .gitmodules  CMakeLists.txt  README.md
Seden/assets/shaders/: hash.glsl
Seden/src/: application.cpp  application.h  application.hpp  applicationInfo.h  components.hpp  deltaTime.hpp  font.cpp  font.hpp  imgui.ini  logger.h  main.cpp  object.hpp  pch.h  renderer.cpp  renderer.h  renderer.hpp  scene.cpp  scene.h  scene.hpp  test.cpp  window.cpp  window.h  window.hpp
Seden/src/animation/: animation.cpp  animation.hpp  animator.cpp  animator.hpp  curve.cpp  curve.hpp
Seden/src/default_Items/: defaultEffects.h  defaultShapes.h  defaultTheme.h  defaultWindows.h
Seden/src/object/: components.cpp  components.hpp  object.hpp
Seden/src/opengl/: buffer.cpp  buffer.hpp  shader.cpp  shader.hpp  vertexArray.cpp  vertexArray.hpp
Seden/src/plugin_api/: GUIwindow.h  IPlugin.h  effect.h  shape.h  theme.h
Seden/src/plugins/: Plugin1.cpp
Seden/src/renderer/: renderer.cpp  renderer.hpp  shaderRenderer.cpp  shaderRenderer.hpp
Seden/src/ressource_manager/: ShaderSystem.h  fileSystem.h  imgui.ini  pluginSystem.h
Seden/src/util/: clock.hpp  math.h  sync.h
testApp/: main.cpp  testScene.h
testApp/exampleScenes/: mandelbulb.h
testApp/exampleScenes/mandelbulb/: mandelbrotFS.glsl  mandelbrotVS.glsl  mandelbulb.h  mandelbulbFS.glsl
